--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,7 +18,7 @@ h2{
 
 #navigation{
     z-index: 3;
-    position: relative;
+    position: absolute;
     width: 100%;
     box-shadow: 0 2px 3px rgba(0,0,0,.4);
     background-color: #fff;
@@ -71,6 +71,33 @@ h2{
     color: #fff;
 }
 
+#nav-container #current-page{
+    background-color: #3e6bca;
+    color: #fff;
+}
+
+#content{
+    z-index: 2;
+    position: relative;
+}
+
+#footer{
+	position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+#developer-info{
+    width: fit-content;
+    margin: auto;
+    font-family: Apple Chancery, monospace;
+}
+
+#developer-info a{
+    color: #4286f4;
+    text-decoration: none;
+}
+
 @media screen and (min-width: 820px){
     p{
         font-size: 14pt;
@@ -116,6 +143,10 @@ h2{
         background: #356dc9;
     }
 
+    #content{
+        top: 4em;
+    }
+
     #developer-info{
         font-size: 11pt;
     }
@@ -144,34 +175,28 @@ h2{
         color: #fff;
     }
 
+    #content{
+        top: 5em;
+    }
+
     #developer-info{
         font-size: 10pt;
     }
 }
 
-#nav-container #current-page{
-    background-color: #3e6bca;
-    color: #fff;
-}
-
-#content{
+#header h1{
+    position: absolute;
+    font-size: 20pt;
     z-index: 2;
-    position: relative;
-}
-
-#footer{
-	position: absolute;
-    bottom: 0;
+    color: #fff;
+    text-shadow: 0.1em 0.1em 0.1em #000;
+    text-align: center;
     width: 100%;
+    top: 2.8em;
 }
 
-#developer-info{
-    width: fit-content;
-    margin: auto;
-    font-family: Apple Chancery, monospace;
-}
-
-#developer-info a{
-    color: #4286f4;
-    text-decoration: none;
+#header img{
+    z-index: 1;
+    width: 100%;
+    filter: grayscale(70%);
 }
