--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -84,6 +84,7 @@ h2{
 	position: absolute;
     bottom: 0;
     width: 100%;
+    padding-top: 3em;
 }
 
 #developer-info{
@@ -103,7 +104,7 @@ h2{
     }
 
     p{
-        font-size: 14pt;
+        margin: 3em;
     }
 
     #navigation{
@@ -171,7 +172,7 @@ h2{
         margin: 3em auto;
     }
 
-    #current-sun{
+    #current-sun, #current-price{
         text-align: center;
         display: block;
     }
@@ -182,7 +183,9 @@ h2{
         font-size: 18pt;
     }
     p{
-        font-size: 12pt;
+        margin: 3em auto;
+        max-width: 50em;
+        padding: 0 3em;
     }
 
     #navigation{
@@ -228,7 +231,7 @@ h2{
         margin: 3em auto;
     }
 
-    #current-sun{
+    #current-sun, #current-price{
         text-align: center;
         display: block;
         font-size: 14pt;
