--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,13 +90,17 @@ h2, h3{
 	position: absolute;
     bottom: 0;
     width: 100%;
-    padding-top: 3em;
+    margin: 3em 0 1em 0;
 }
 
 #developer-info{
     width: fit-content;
     margin: auto;
     font-family: Apple Chancery, monospace;
+}
+
+#developer-info span{
+    text-align: center;
 }
 
 #developer-info a{
